@@ -1,6 +1,6 @@
 Name: netcdf
-Version: 1.0.8
-Date: 2016-01-27
+Version: 1.0.9
+Date: 2016-02-19
 Author: Alexander Barth <barth.alexander@gmail.com>
 Maintainer: Alexander Barth <barth.alexander@gmail.com>
 Title: netcdf
